tests/baselines/reference/classStaticBlock19.errors.txt
classStaticBlock19.ts(2,5): error TS1206: Decorators are not valid here.


==== classStaticBlock19.ts (1 errors) ====
    class C {
        @decorator
        ~
!!! error TS1206: Decorators are not valid here.
        static {
            // something
        }
    }
    